--- a/Mijn CV/Mijn CV/Views/Home/Index.cshtml
+++ b/Mijn CV/Mijn CV/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home Page of the Straw hats online CV!";
 }
 
 <div class="text-center">
