--- a/Mijn CV/Mijn CV/wwwroot/css/site.css
+++ b/Mijn CV/Mijn CV/wwwroot/css/site.css
@@ -16,3 +16,21 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+/*Styling the footer*/
+.flex-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.content {
+    flex: 1;
+}
+
+.footer {
+    background-color: #333;
+    color: white;
+    padding: 1rem;
+}
+
